--- a/templates/layout.html
+++ b/templates/layout.html
@@ -64,13 +64,13 @@
         {% if user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link text-danger" href="{% url 'logout' %}">
-              <i class="fas fa-sign-out-alt"></i> Thoát
+              Thoát
             </a>
           </li>
           {% if user.is_staff %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'admin:index' %}">
-                <i class="fas fa-arrow-left"></i> Quay lại Admin
+                Quay lại Admin
               </a>
             </li>
           {% endif %}
